# cuda-quantum

.github/workflows/: test_in_devenv.yml
benchmarks/python/: ampitude_estimation.py  bernstein_vazirani.py
docs/sphinx/api/languages/: python_api.rst
docs/sphinx/examples/python/: dynamic_simulation.py  dynamic_simulation_v2.py  intro.py  new_utility_functions.py  noise_amplitude_damping.py  qaoa_maxcut.py  state_initialization.py
docs/sphinx/using/install/: data_center_install.rst
include/cudaq/Optimizer/CodeGen/: QIRFunctionNames.h
lib/Optimizer/CodeGen/: LowerToQIR.cpp
python/: CMakeLists.txt  _cudaq.cpp  cudaq.py
python/runtime/cudaq/algorithms/: py_observe.cpp  py_sample.cpp
python/tests/fun_tests/: main.py  module_.py
python/tests/language/: prototyping.py
runtime/cudaq/: CMakeLists.txt  algorithm.h  definition.h  expressions.h  hamiltonian.h  matrix.h  operator_utils.h  operators.h  spin_op.h
runtime/cudaq/algorithms/: get_unitary.cpp  get_unitary.h  sample.h
runtime/cudaq/builder/: kernel_builder.cpp  kernels.h
runtime/cudaq/dynamics/: CMakeLists.txt  elementary_operators.cpp  expressions.cpp  instantiations.cpp  manipulation.cpp  operator_sum.cpp  product_operators.cpp
runtime/cudaq/operators/: CMakeLists.txt  hamiltonian.cpp  operators.cpp
runtime/cudaq/qis/: execution_manager.h  qubit_qis.h
runtime/cudaq/utils/: tensor.cpp  tensor.h
runtime/nvqir/: AnalogSimulator.h  CMakeLists.txt  Gates.h  NVQIR.cpp
runtime/nvqir/analog_simulator/: CMakeLists.txt  CustomAnalogSimulator.cpp
test/Quake/: roundtrip-ops.qke
unittests/: CMakeLists.txt
unittests/dynamics/: elementary_ops_arithmetic.cpp  product_operators_arithmetic.cpp
unittests/integration/: get_unitary_tester.cpp
(+36 files in other folders)
